package triptop.groepB4.domein;

public class SmsVerifyLoginBody {
    public String verificationCode;
}
